--- a/TP 2/index.html
+++ b/TP 2/index.html
@@ -11,6 +11,11 @@
 <body>
 
     <main>
+
+        <div class="cuadrado"> </div>
+        <div class=></div>
+        <div></div>
+        <div></div>
         
         <section class="izquierda">
            
