--- a/TP 2/index.html
+++ b/TP 2/index.html
@@ -10,21 +10,31 @@
 
 <body>
 
+    <section class="fondo">
+
+        <div class="container-login">
+
+            <div class="icon">
+
+                <img src="img/icon-cam.png" alt="avatar" title="avatar">
+
+            </div>
+
+            <ul class="list">
+
+                <li> Inicio de Sesión </li>
+                <li> <input type="text" name="Usuario" placeholder="Usuario/E-mail"> </li>
+                <li> <input type="password" name="Contraseña" placeholder="Password"></li>
+                <li> <button name="Enviar">Iniciar Sesión</button></li>
+                <li> <a href="http://NewPassword" target="_blank">¿Olvidaste tu contraseña? </a> </li>
+
+            </ul>
+
+        </div>
+
+    </section>
 
 
-    <div class="container-login">
-
-        <ul class="list">
-            
-            <li> Inicio de Sesión </li>
-            <li> <input type="text" name="Usuario" placeholder="Usuario/E-mail"> </li>
-            <li> <input type="password" name="Contraseña" placeholder="Password"></li>
-            <li> <button name="Enviar">Iniciar Sesión</button></li>
-            <li> <a href="http://NewPassword" target="_blank">¿Olvidaste tu contraseña? </a> </li>
-
-        </ul>
-
-    </div>
 
 
 
