--- a/TP 1/index.html
+++ b/TP 1/index.html
@@ -17,14 +17,15 @@
 
         <div class="navigation-container">
 
-            <img src="img/IsologoMK.png" alt="Logo" class="logo">
+            <img src="img/IsologoMK.png" href="https://HOME" target="_blank" alt="Logo" class="logo">
 
             <nav class="navigation">
-
-                <a href="https://HOME" target="_blank">HOME</a>
-                <a href="https://ABOUT" target="_blank">ABOUT</a>
-                <a href="https://PORTFOLIO" target="_blank">PORTFOLIO</a>
-                <a href="https://CONTACTO" target="_blank">CONTACTO</a>
+                <ul>
+                    <li><a href="https://ABOUT" target="_blank">ABOUT</a></li>
+                    <li><a href="https://PORTFOLIO" target="_blank">PORTFOLIO</a></li>
+                    <li><a href="https://CONTACTO" target="_blank">CONTACTO</a>    </li>       
+                </ul>
+                
      
             </nav>
         </div>
