--- a/TP 1/index.html
+++ b/TP 1/index.html
@@ -17,21 +17,26 @@
 
         <div class="navigation-container">
 
-            <img src="img/IsologoMK.png" href="https://HOME" target="_blank" alt="Logo" class="logo">
+            <img class="logo" src="img/IsologoMK.png" alt="Logo">
 
             <nav class="navigation">
-                <ul>
-                    <li><a href="https://ABOUT" target="_blank">ABOUT</a></li>
-                    <li><a href="https://PORTFOLIO" target="_blank">PORTFOLIO</a></li>
-                    <li><a href="https://CONTACTO" target="_blank">CONTACTO</a>    </li>       
-                </ul>
-                
-     
+
+                <a href="https://ABOUT" target="_blank">ABOUT</a>
+                <a href="https://PORTFOLIO" target="_blank">PORTFOLIO</a>
+                <a href="https://TIENDA" target="_blank">TIENDA</a>
+                <a href="https://CONTACTO" target="_blank">CONTACTO</a>
+
             </nav>
+
         </div>
 
-        <h1>MARTINA KUCHARCZUK</h1>
-        <h2>Soluciones Creativas</h2>
+        <div class="headings">
+
+            <h1>MARTINA KUCHARCZUK</h1>
+            <h2>Soluciones Creativas</h2>
+
+        </div>
+
 
     </header>
 
@@ -140,7 +145,7 @@
                 <h4>Newsletter</h4>
 
                 <p>Registrate para recibir todas las novedades
-                    <br> ofertas del e-shop y nuestros servicios 
+                    <br> ofertas del e-shop y nuestros servicios
                 </p>
 
             </div>
@@ -157,11 +162,12 @@
 
         <nav class="navigation-container">
 
+            <img class="logo" src="img/IsologoMK.png" alt="Logo">
+
             <ul class="navigation">
-                <a href="https://HOME" target="_blank">INSTAGRAM</a>
+                <a href="https://INSTAGRAM" target="_blank">INSTAGRAM</a>
                 <a href="https://ABOUT" target="_blank">FACEBOOK</a>
                 <a href="https://PORTFOLIO" target="_blank">WHATSAPP</a>
-                <a href="https://E-SHOP" target="_blank">SKYPE</a>
                 <a href="https://CONTACTO" target="_blank">GMAIL</a>
             </ul>
 
