--- a/TP 1/index.html
+++ b/TP 1/index.html
@@ -21,13 +21,13 @@
 
             <nav class="navigation">
 
-                <a href="https://ABOUT" target="_blank">ABOUT</a>
+                <a href="https://ABOUT" target="_blank">SOBRE MÍ</a>
                 <a href="https://PORTFOLIO" target="_blank">PORTFOLIO</a>
                 <a href="https://TIENDA" target="_blank">TIENDA</a>
                 <a href="https://CONTACTO" target="_blank">CONTACTO</a>
 
             </nav>
-
+ 
         </div>
 
         <div class="headings">
